--- a/reddit-feed/src/assets/scss/base/_typography.scss
+++ b/reddit-feed/src/assets/scss/base/_typography.scss
@@ -58,6 +58,14 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
+	#intro p {
+		margin-bottom: 0px;
+	}
+
+	#intro h2 {
+		margin-top: 1rem;
+	}
+
 	h1, h2, h3, h4, h5, h6 {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
@@ -83,7 +91,7 @@
 	}
 
 	h1 {
-		font-size: 2.25rem;
+		font-size: 1.8rem;
 		line-height: 1.3;
 		letter-spacing: _font(letter-spacing-heading);
 	}
